#334: Added Employee object and updated GetEmployee and GetEmployees UCs